Fix: body add max-width to disable scroll devtool + Header: button wrap link

--- a/src/components/Footer/styles.scss
+++ b/src/components/Footer/styles.scss
@@ -6,6 +6,7 @@
 .footer {
   background-color: vars.$main-primary-color;
   color: #fff;
+  width: 100vw;
 
   &__contact {
     display: flex;
