--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -132,6 +132,20 @@
     transition: 0.5s;
     cursor: pointer;
     color: #fff;
+
+    &-icon{
+      display: flex;
+      flex-direction: row;  
+    }
+    
+    &-pseudo{
+      display: none;
+      @include mixin.breakpoint(desktop) {
+        display: block;
+        margin-left: 5px;
+      }
+    }
+  
   }
   &__login-button:hover {
     background-color: #fc9100;
