--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -13,6 +13,8 @@
   body {
     font-family: 'Poppins', sans-serif;
     overflow-x: hidden;
+    width: 100vw;
+    max-width: 100%;
   }
   
 /*==================== SECTION ========================*/
